manifests/problems-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: problems-deployment
  labels:
    app: problems
spec:
  replicas: 3
  selector:
    matchLabels:
      app: problems
  template:
    metadata:
      labels:
        app: problems
    spec:
      containers:
        - name: problems-app
          image: jalgoarena/problems:1.0.22
          ports:
            - containerPort: 8080
