manifests/problems-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: problems-service
  labels:
    app: problems
spec:
  selector:
    app: problems
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
