manifests/problems-store-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: problems-store-service
  labels:
    app: problems-store
spec:
  selector:
    app: problems-store
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
