manifests/problems-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: problems-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: problems-ip
  labels:
    app: problems
spec:
  backend:
    serviceName: problems-backend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: problems-backend
  labels:
    app: problems
spec:
  type: NodePort
  selector:
    app: problems
  ports:
    - port: 8080
      targetPort: 8080
